--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ DerivedData
 *.ipa
 *.xcuserstate
 project.xcworkspace
+ios/.xcode.env.local
 
 # Android/IJ
 #
@@ -39,6 +40,8 @@ project.xcworkspace
 .settings
 local.properties
 android.iml
+*.keystore
+!debug.keystore
 
 # Cocoapods
 #
