--- a/example/package.json
+++ b/example/package.json
@@ -11,25 +11,33 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.9.1",
-    "react": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-reanimated": "^2.9.1",
+    "react": "18.2.0",
+    "react-native": "^0.71.0",
+    "react-native-reanimated": "^2.14.1",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2",
+    "react-native-screens": "^3.19.0",
     "react-native-share": "^8.0.0",
     "react-native-simple-radio-button": "^2.7.4",
-    "react-native-svg": "^13.4.0",
+    "react-native-svg": "^13.7.0",
     "react-native-vision-camera": "^2.15.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/runtime": "^7.12.5",
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@tsconfig/react-native": "^2.0.2",
+    "@types/jest": "^29.2.1",
+    "@types/react": "^18.0.24",
+    "@types/react-test-renderer": "^18.0.0",
     "@types/react-native-simple-radio-button": "^2.7.2",
     "babel-plugin-module-resolver": "^4.1.0",
-    "metro-react-native-babel-preset": "^0.67.0",
+    "metro-react-native-babel-preset": "^0.73.7",
     "patch-package": "^6.4.7",
-    "postinstall-postinstall": "^2.1.0"
+    "postinstall-postinstall": "^2.1.0",
+    "prettier": "^2.4.1",
+    "react-test-renderer": "18.2.0",
+    "typescript": "4.8.4"
   }
 }
