--- a/package.json
+++ b/package.json
@@ -59,17 +59,17 @@
     "@react-native-community/eslint-config": "^3.0.2",
     "@release-it/conventional-changelog": "^5.0.0",
     "@types/jest": "^28.1.2",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "0.68.0",
+    "@types/react": "^18.0.24",
+    "@types/react-native": "0.71.0",
     "commitlint": "^17.0.2",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^28.1.1",
+    "jest": "^29.2.1",
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
-    "react": "17.0.2",
-    "react-native": "0.68.2",
+    "react": "18.2.0",
+    "react-native": "^0.71.0",
     "react-native-builder-bob": "^0.18.3",
     "react-native-vision-camera": "^2.14.1",
     "release-it": "^15.0.0",
